// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Basic should close options on click out 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option>
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;

exports[`Select Basic should create 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should create with placeholder 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      Select
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic should open options on click 1`] = `
<gro-select
  class="gro-opened"
>
  <div
    class="gro-select-wrapper"
  >
    <span>
      
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option>
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;

exports[`Select Basic when initialized with value then check 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      Two
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  
</gro-select>
`;

exports[`Select Basic when select option then check 1`] = `
<gro-select>
  <div
    class="gro-select-wrapper"
  >
    <span>
      One
    </span>
    <gro-material-icon>
      expand_more
    </gro-material-icon>
  </div>
  <div
    class="gro-options-wrapper ng-trigger ng-trigger-slideDownUp ng-animating"
    style="height:12rem;0:height;"
  >
    <gro-option
      class="gro-selected"
    >
      One
    </gro-option>
    <gro-option>
      Two
    </gro-option>
    <gro-option>
      Three
    </gro-option>
  </div>
  
</gro-select>
`;
